Update FileExt_removeTest.java
Fixed string formatting to Java 14-th formatter.